# OmiXAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
cnn model framework/: data_preparation.py
data/: dataset.py  graph_dataset.py
graph model framework/: graph_data_preparation.py
models/: __init__.py  gnn.py
omixai/: __init__.py  pfi.py  pipeline.py
omixai/data/: __init__.py  dataset.py  genome.py  graph_dataset.py
omixai/models/: cnn.py  gnn.py
omixai/training/: __init__.py  retrain.py  train_cnn.py  train_gnn.py
omixai/xai/: __init__.py  pfi.py
scripts/: compare_old_new_ranking.py  correlation_matrices.py  eval.slurm  eval_gnn.py  eval_orig.py  eval_orig.slurm  genome_cache.py  merge_retrain_results.py  omixai.slurm  pfi.slurm  retrain.slurm  retrain_faithful.py  retrain_faithful_omixai.slurm  retrain_faithful_pfi.slurm  retrain_topk.py  retrain_topk.slurm  run_interpret.py  run_omixai_gnn.py  run_pfi_rf.py  run_retrain.py
training/: __init__.py
